--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  background-image: linear-gradient(to right bottom, rgb(255,51,102), rgb(186,38,93));
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,4 +25,29 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .pulsate-animation {
+    animation: pulsate 1s infinite;
+  }
+
+@keyframes pulsate {
+  0% {
+      transform: scale(1);
+      box-shadow: none;
+  }
+
+  50% {
+      transform: scale(1.05);
+      box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100%{
+      transform: scale(1);
+      box-shadow: none;
+  }
 }
+}
+
+
+
+
